fixed form width on small screens

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -84,6 +84,10 @@ body{
     }
 
     .main{
-        padding: 30% 4% 0 10%;
+        padding: 30% 8% 0 8%;
+    }
+
+    form{
+        width: 100% !important;
     }
 }
